...
            children: [
              const SizedBox(height: 16.0),
              TextField(
                controller: _nombreController,
                decoration: const InputDecoration(
                  border: OutlineInputBorder(),
                  hintText: 'Nombre de la tarea',
                  contentPadding: EdgeInsets.all(16.0),
                  label: Text('Nombre de la tarea'),
                ),
              ),
              const SizedBox(height: 16.0),
              TextField(
...
                height: 48,
                child: ElevatedButton(
                  onPressed: _guardarTarea,
                  style: ElevatedButton.styleFrom(
                    backgroundColor: ColoresApp.primario,
                  ),
                  child: const Text('Agregar'),
                ),
              ),
              const SizedBox(height: 16.0),
            ],
          ),
        ),
...
